# postgres-gpt

./: .gitignore  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  requirements.txt  setup.cfg
.github/workflows/: build-package.yml
docs/: conf.py  index.rst
src/postgresgpt/: lib.py
test/: test_lib.py  test_postgresgpt.py
