[metadata]
name = postgres-gpt
version = 0.0.1
description = A python package to generate SQL code using natural language for Postgres DB
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/somasays/postgres-gpt
author = Somasundaram Sekar
author_email = "Somasundaram Sekar" <somasundaram@outlook.com>
license = Apache Software License
license_files = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License

[options]
python_requires = >=3.9
package_dir =
    =src
packages = find_namespace:
include_package_data = True
install_requires =
    asyncpg>=0.27.0
    openai>=0.27.5

[options.packages.find]
where = src
exclude =
    test*

######################
# Tool configuration #
######################

[mypy]
python_version = 3.10
warn_unused_configs = True
show_error_context = True
pretty = True
namespace_packages = True
check_untyped_defs = True

[flake8]
max-line-length = 120

[tool:pytest]
testpaths = test
addopts = --cov --strict-markers
xfail_strict = True

[coverage:run]
source = postgresgpt
branch = True

[coverage:report]
fail_under = 10.0
show_missing = True
skip_covered = True

[coverage:paths]
source =
    src/postgresgpt
    */site-packages/postgresgpt

[tox:tox]
envlist = py39,py310
isolated_build = True

[testenv]
deps =
    pytest
    pytest-cov
    pytest-mock
    pytest-asyncio
commands =
    pytest {posargs}

[testenv:typecheck]
deps =
    mypy
    pytest
    types-termcolor
commands =
    mypy --ignore-missing-imports {posargs:src test}

[testenv:format]
skip_install = True
deps =
    black
commands =
    black {posargs:--check --diff src test}

[testenv:lint]
skip_install = True
deps =
    flake8
    flake8-bugbear
commands =
    flake8 {posargs:src test}

[testenv:docs]
deps =
    sphinx
commands =
    sphinx-apidoc \
        --force \
        --implicit-namespaces \
        --module-first \
        --separate \
        -o docs/reference/ \
        src/postgresgpt/ \
        src/postgresgpt/*.c \
        src/postgresgpt/*.so
    sphinx-build -n -W --keep-going -b html docs/ docs/_build/

[testenv:devdocs]
deps =
    sphinx
    sphinx-autobuild
commands =
    sphinx-apidoc \
        --force \
        --implicit-namespaces \
        --module-first \
        --separate \
        -o docs/reference/ \
        src/postgresgpt/ \
        src/postgresgpt/*.c \
        src/postgresgpt/*.so
    sphinx-autobuild -n -W -b html docs/ docs/_build/
